--- a/AdminLTE/src/main/resources/templates/admin/dashboard.html
+++ b/AdminLTE/src/main/resources/templates/admin/dashboard.html
@@ -94,8 +94,154 @@
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
-                <!-- ./col -->
+                <!-- ./col -->               
             </div>
+            
+	        <div class="row">
+	          <div class="col-12 col-sm-12">
+	            <div class="card card-primary card-tabs">
+	              <div class="card-header p-0 pt-1">
+	                <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
+	                  <li class="nav-item">
+	                    <a class="nav-link active" id="custom-tabs-one-home-tab" data-toggle="pill" href="#custom-tabs-one-home" role="tab" aria-controls="custom-tabs-one-home" aria-selected="true">Home</a>
+	                  </li>
+	                  <li class="nav-item">
+	                    <a class="nav-link" id="custom-tabs-one-profile-tab" data-toggle="pill" href="#custom-tabs-one-profile" role="tab" aria-controls="custom-tabs-one-profile" aria-selected="false">Profile</a>
+	                  </li>
+	                  <li class="nav-item">
+	                    <a class="nav-link" id="custom-tabs-one-messages-tab" data-toggle="pill" href="#custom-tabs-one-messages" role="tab" aria-controls="custom-tabs-one-messages" aria-selected="false">Messages</a>
+	                  </li>
+	                  <li class="nav-item">
+	                    <a class="nav-link" id="custom-tabs-one-settings-tab" data-toggle="pill" href="#custom-tabs-one-settings" role="tab" aria-controls="custom-tabs-one-settings" aria-selected="false">Settings</a>
+	                  </li>
+	                </ul>
+	              </div>
+	              <form>
+	            	<div class="card-body">
+	                <div class="tab-content" id="custom-tabs-one-tabContent">	                
+	                  <div class="tab-pane fade show active" id="custom-tabs-one-home" role="tabpanel" aria-labelledby="custom-tabs-one-home-tab">	   						
+						
+							<div class="card-body">
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label> 
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label> 
+									<input type="password" class="form-control"	id="exampleInputPassword1" placeholder="Password">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputFile">File input</label>
+									<div class="input-group">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input" id="exampleInputFile"> 
+											<label class="custom-file-label" for="exampleInputFile">Choose file</label>
+										</div>
+										<div class="input-group-append">
+											<span class="input-group-text">Upload</span>
+										</div>
+									</div>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input"	id="exampleCheck1">
+									<label	class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+							</div>
+											<!-- /.card-body -->						
+					  </div>
+	                  <div class="tab-pane fade" id="custom-tabs-one-profile" role="tabpanel" aria-labelledby="custom-tabs-one-profile-tab">
+	                    <div class="card-body">
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label> 
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label> 
+									<input type="password" class="form-control"	id="exampleInputPassword1" placeholder="Password">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputFile">File input</label>
+									<div class="input-group">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input" id="exampleInputFile"> 
+											<label class="custom-file-label" for="exampleInputFile">Choose file</label>
+										</div>
+										<div class="input-group-append">
+											<span class="input-group-text">Upload</span>
+										</div>
+									</div>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input"	id="exampleCheck1">
+									<label	class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+							</div>
+	                  </div>
+	                  <div class="tab-pane fade" id="custom-tabs-one-messages" role="tabpanel" aria-labelledby="custom-tabs-one-messages-tab">
+	                    <div class="card-body">
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label> 
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label> 
+									<input type="password" class="form-control"	id="exampleInputPassword1" placeholder="Password">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputFile">File input</label>
+									<div class="input-group">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input" id="exampleInputFile"> 
+											<label class="custom-file-label" for="exampleInputFile">Choose file</label>
+										</div>
+										<div class="input-group-append">
+											<span class="input-group-text">Upload</span>
+										</div>
+									</div>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input"	id="exampleCheck1">
+									<label	class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+							</div>
+	                  </div>
+	                  <div class="tab-pane fade" id="custom-tabs-one-settings" role="tabpanel" aria-labelledby="custom-tabs-one-settings-tab">
+	                     <div class="card-body">
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label> 
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label> 
+									<input type="password" class="form-control"	id="exampleInputPassword1" placeholder="Password">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputFile">File input</label>
+									<div class="input-group">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input" id="exampleInputFile"> 
+											<label class="custom-file-label" for="exampleInputFile">Choose file</label>
+										</div>
+										<div class="input-group-append">
+											<span class="input-group-text">Upload</span>
+										</div>
+									</div>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input"	id="exampleCheck1">
+									<label	class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+							</div>
+	                  </div>
+	             	</div>
+	             </div>
+	           		<div class="card-footer">
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</div>
+	             </form>
+	             <!-- /.card -->          
+            </div>
+          </div>
         </div>
     </section>
     <!-- End Main content -->
